# zavod_teplits_testovoe_backend

./: .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: db.sqlite3  pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  serializers.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_feedback_message.py  0003_alter_feedback_message.py
backend/config/: urls.py
backend/config/settings/: base.py  prod.py
backend/front/: views.py
backend/templates/: base.html
backend/templates/front/: index.html
docker/backend/: Dockerfile
docker/nginx/: nginx.conf
dump/: postmaster.pid
dump/base/13756/: 13580
dump/base/13757/: 2619
dump/global/: 1260  1262  2671  2676  pg_control
dump/pg_stat/: global.stat
dump/pg_stat_tmp/: global.stat
static/css/: style.css
