[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dev-cmyser <cmyser.fast@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
django-rest-framework = "^0.1.0"
django-rest-swagger = "^2.2.0"
django-filter = "^23.1"
djoser = "^2.1.0"
django-cors-headers = "^3.14.0"
django-versatileimagefield = "^3.0"
django-constance = "^2.9.1"
django-ckeditor = "^6.5.1"
django-picklefield = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
